renamed my-first-website.html index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,24 +7,8 @@ h2 {
   font-style: italic;
   text-align: center;
 }
-p {font-family: sans-serif;
+p {font-family: fantasy;
 }
-ul {
-  line-height: 40px;
-}
-body, html {
-    height: 100%;
-}
-
-.bg {
-    /* The image used */
-    background-image: url("images/lightning.gif");
-
-    /* Full height */
-    height: 100%;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+ul{
+  line-height: 30px;
 }
