--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,23 @@ h1 {
   color: blue;
   text-align: center;
 }
+
 h2 {
   color: green;
+  font-style:oblique ;
+  text-align: justify;
+}
+
+p {
+  font-family: sans-serif;
+}
+
+ul {
+  line-height: 40px;
+}
+strong{
   font-style: italic;
-  text-align: center;
 }
-p {font-family: fantasy;
-}
-ul{
-  line-height: 30px;
+em{
+  font-weight: bold;
 }
